Tue  Sep 7  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in the "Select new location for DB file" dialog in
       Preferences.
     * Moved the get_homedir code to a subroutine.
     * Bumped version to 2.0pre1

Mon  Sep 6  2004	H. Wade Minter (minter@lunenburg.org)
     * Happy birthday to me!
     * Added support for AAC files (.m4a, .mp4) via the MP4::Info module.
       Protected AAC (iTunes Music Store, .m4p) don't work.

Sun  Sep 5  2004	H. Wade Minter (minter@lunenburg.org)
     * Switch the updater to use SQLite transactions on the inserts, instead
       of autocommits.  Makes things much faster.

Fri  Sep 3  2004	H. Wade Minter (minter@lunenburg.org)
     * Give up on having the 2.0 updater in Perl/Tk and get it working
       via the console.
     * Begin documentation update for 2.0.

Wed  May 26 2004	H. Wade Minter (minter@lunenburg.org)
     * Switch from DBD::MySQL to DBD::SQLite
     * Move database schema into the __DATA__ block of mrvoice.pl

Tue  May 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Display invalid songs (where there is an entry in the database, but
       no corresponding file on disk) in the search results, but tag them
       in red.

Mon  Apr 26 2004	H. Wade Minter (minter@lunenburg.org)
     * Switched direct accesses of @_ to use shift() instead.  Seems more
       perlish and easier to read.

Sun  Apr 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Tightened up some Fkey code - I had way too many repeated lines
       in there.

Fri  Apr 23 2004	H. Wade Minter (minter@lunenburg.org)
     * Mr. Voice now compiles under "use strict" - I rock.

Thu  Apr 22 2004	H. Wade Minter (minter@lunenburg.org)
     * Bumped version number to 1.10.7
     * Got rid of a lot of repeated code in the hotkeys area.  More 
       spring cleaning.

Mon  Apr 19 2004	H. Wade Minter (minter@lunenburg.org)
     * Tagged Release 1.10.6 (real release incorporating WMA support
       and D&D Bugfixes)
